--- a/vuejs/index.html
+++ b/vuejs/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Github Vuejs</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
 </head>
+
 <body>
-    
-    <!-- llamamos a la funcion de vue -->
-    <div id="app">
-        <!-- v-model es vuejs -->
-        <input v-model="username" type="text" placeholder="name of user">
-        <!-- para cuando hace las busquedas -->
-        <ol>
-            <!-- v-for repo identifica a repos -->
-            <li v-for="repo in repos">{{repo.name}}</li>
-        </ol>
-    </div>
+
+    <nav>
+        <a href="logo">Rocío Cejudo</a>
+        <div class="btn-menu">
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <ul class="menu">
+            <li><a href="https://github.com/rcellas"><i class="fab fa-github-alt"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/rociocejudo/"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://twitter.com/rcellas"><i class="fab fa-twitter"></i></a></li>
+        </ul>
+    </nav>
+    <center>
+        <i class="fab fa-github"></i><i class="fab fa-vuejs"></i>
+        <h2>Github api whit Vuejs</h2>
+        <!-- llamamos a la funcion de vue -->
+        <div id="app">
+            <!-- v-model es vuejs -->
+            <input v-model="username" type="text" placeholder="Name of user">
+            <!-- para cuando hace las busquedas -->
+            <ol>
+                <!-- v-for repo identifica a repos -->
+                <li v-for="repo in repos">{{repo.name}}</li>
+            </ol>
+        </div>
+    </center>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
 <script src="app.js"></script>
+
 </html>
