--- a/react-git/public/index.html
+++ b/react-git/public/index.html
@@ -24,6 +24,14 @@
     <title>Github React 1</title>
   </head>
   <body>
+      <nav>
+          <a href="logo">Rocío Cejudo</a>
+          <ul>
+              <li><a href="https://github.com/rcellas"><i class="fab fa-github-alt"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/rociocejudo/"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="https://twitter.com/rcellas"><i class="fab fa-twitter"></i></a></li>
+          </ul>
+      </nav>
     <div id="root"></div>
     <!--
       This HTML file is a template.
